Move to Java 11; Update README